[project]
name = "idiomatch"
version = "0.2.9"
description = "Spacy's Matcher specifically designed for matching English idioms"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "spacy>=3.8.4",
    "loguru>=0.7.3",
]


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["idiomatch"]
include-package-data = true

[tool.setuptools.package-data]
idiomatch = ["patterns/*.json"]
