[project]
name = "idiomatch"
version = "0.2.13"
description = "Spacy's Matcher specifically designed for matching English idioms"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "spacy>=3.8.4",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.6"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "openai>=1.66.3",
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["find:"]
include-package-data = true

[tool.setuptools.package-data]
idiomatch = ["resources/*.json", "resources/idioms.yml"]
